--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -12,17 +12,18 @@ body {
    */
 
 .sidebar {
+    margin-left: -15px;
     position: fixed;
-    top: 0;
+    top: -5px;
     /* rtl:raw:
-    right: 0;
     */
+    right: 0;
     bottom: 0;
     /* rtl:remove */
     left: 0;
     z-index: 100;
     /* Behind the navbar */
-    padding: 48px 0 0;
+    /* padding: 48px 0 0; */
     /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
@@ -46,6 +47,7 @@ body {
 .sidebar .nav-link {
     font-weight: 500;
     color: #333;
+    font-size: small;
 }
 
 .sidebar .nav-link .feather {
@@ -63,7 +65,7 @@ body {
 }
 
 .sidebar-heading {
-    font-size: .75rem;
+    font-size: medium;
 }
 
 /*
